--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,10 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,16 +15,11 @@ buildscript {
 
 allprojects {
     repositories {
-        // For GVR components, the official source of the .aars is the Google
-        // repository.
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
         jcenter()
-
-        // You can also use a local Maven repository if desired.
-        mavenLocal()
-
+        google()
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
